--- a/Front/projeto_palpedia/package.json
+++ b/Front/projeto_palpedia/package.json
@@ -10,11 +10,13 @@
     "bootstrap": "^5.3.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.1",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "sass": "^1.70.0",
