--- a/Front/projeto_palpedia/package.json
+++ b/Front/projeto_palpedia/package.json
@@ -11,11 +11,13 @@
     "chart.js": "^4.4.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.1",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
