--- a/Front/projeto_palpedia/package.json
+++ b/Front/projeto_palpedia/package.json
@@ -11,6 +11,8 @@
     "chart.js": "^4.4.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.1",
+    "i18next": "^23.8.2",
+    "i18next-browser-languagedetector": "^7.2.0",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
